# whisper_asr

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/src/: conf.py
assets/: design.drawio
kube/: deployment.yaml  service.yaml
src/utils/: general.py  structure.py
